func: add button #btn-showConsole on #page-system to show dConsole

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
             <span>
                 <button id="btn-fullscreen" class="btn">Go FullScreen Now!</button>
             </span>
+            <span>
+                <button id="btn-showConsole">Show Console</button>
+            </span>
 
             <span class="controls">
                 <span class="view-album"></span>
