style: add icons to #menu-share

--- a/index.html
+++ b/index.html
@@ -167,12 +167,18 @@
 
         <div id="menu-share" class="menu ease-p3 menu-hide">
             <ul id="ulShare">
-                <li>分享到云音乐</li>
-                <li>私信分享</li>
-                <li>微信、QQ分享</li>
-                <li>易信分享</li>
-                <li>复制链接</li>
-                <li>其他</li>
+                <li><span class="icon icon-shareToYun"></span>
+                            <span class="btn-shareToYun btn">分享到云音乐</span></li>
+                <li><span class="icon icon-shareToMsg"></span>
+                            <span class="btn btn-shareToMsg">私信分享</span></li>
+                <li><span class="icon icon-shareToTencent"></span>
+                            <span class="btn btn-shareToTencent">微信、QQ分享</span></li>
+                <li><span class="icon icon-shareToYixin"></span>
+                            <span class="btn btn-shareToYixin">易信分享</span></li>
+                <li><span class="icon icon-shareToURL"></span>
+                            <span class="btn btn-shareToURL">复制链接</span></li>
+                <li><span class="icon icon-shareToOtherWays"></span>
+                            <span class="btn btn-shareToOtherWays">其他</span></li>
             </ul>
         </div>
 
@@ -181,23 +187,23 @@
             <ul id="ulFileOpt">
                 <li><span class="icon icon-addTo"></span>
                                 <span class="addTo">收藏到歌单</span></li>
-                <li><span class="icon icon-download"></span>
-                                <span class="download">下载</span></li>
+                <li><span class="btn icon icon-download"></span>
+                                <span class="btn download">下载</span></li>
                 <li><span class="icon icon-tag-artist"></span>
                                 <span class='tag-artist'>歌手：
-                                        <span class="inline value">Owl City</span></span></li>
+                                        <span class="btn inline value">Owl City</span></span></li>
                 <li><span class="icon icon-tag-album"></span>
                                 <span class='tag-album'>专辑：
-                                        <span class="inline value">The Saltwater Room</span></span></li>
+                                        <span class="btn inline value">The Saltwater Room</span></span></li>
                 <li><span class="icon icon-btn-audioQuality"></span>
                                 <span id="btn-audioQuality">音质：
-                                        <span class="inline value">自动选择</span></span></li>
+                                        <span class="btn inline value">自动选择</span></span></li>
                 <li><span class="icon icon-btn-proposeAlike"></span>
-                                <span id="btn-proposeAlike">相似推荐</span></li>
+                                <span id="btn-proposeAlike" class="btn">相似推荐</span></li>
                 <li><span class="icon icon-btn-stopAtTime"></span>
-                                <span id="btn-stopAtTime">定时停止播放</span></li>
+                                <span id="btn-stopAtTime" class="btn">定时停止播放</span></li>
                 <li><span class="icon icon-btn-drivingMode"></span>
-                                <span id="btn-drivingMode">打开驾驶模式</span></li>
+                                <span id="btn-drivingMode" class="btn">打开驾驶模式</span></li>
             </ul>
         </div>
 
