style: add page-comments
1. add page-comments and add related transition
2. change .mainpage-hide to mainpage-hide-right
                 .page-hide to .page-hide-left

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div id="viewport">
-        <div id="page-main" class="page ease-p3 mainpage-hide">
+        <div id="page-main" class="page ease-p3 page-hide-right">
             <div id="main">
                 <nav class='header row'>
                     <span id="btn-back" class='left'></span>
@@ -73,7 +73,7 @@
                         <span class='view-disk ease-p6 btn'></span>
                         <span class='song-opt-grp'>
                             <span id='btnFavorite' class="favorite btnToggle btn"></span>
-                            <span class="btnComments btn"><span>0</span></span>
+                            <span class="btn-comments btn"><span>0</span></span>
                             <span class="btn-fileOpt btn"></span>
                         </span>
                     </div>
@@ -207,7 +207,7 @@
             </ul>
         </div>
 
-        <div id="page-comments" class="page ease-p3 page-hide">
+        <div id="page-comments" class="page ease-p3 page-hide-right">
             <ul id="list-comments">
                 <li>
                     <span class="view-commentUserIcon"></span>
