fix: change btn in 'main' controls to bacome class name refered

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                         <audio src=""></audio>
                         <span id="btn-playMode" class='left'></span>
                         <span id="btn-preSong"></span>
-                        <span id="btn-play"></span>
-                        <span id="btn-nextSong"></span>
+                        <span class="btn btn-play"></span>
+                        <span class="btn btn-nextSong"></span>
                         <span id="btn-songList" class='right'></span>
                     </div>
 
@@ -118,7 +118,7 @@
                 <button id="btn-showConsole">Show Console</button>
             </span>
 
-            <span class="controls">
+            <span class="ban-controls">
                 <span class="view-album"></span>
                 <span class="tag-songMessage">
                     <span class="tag-songTitle tag-title">The Saltwater Room</span>
