func: add span.mask to cover content when a menu showup
todo: add relation to each menu or sidebar

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 </head>
 <body>
     <div id="viewport">
+        <!-- this span.mask help identify click events -->
+        <span class="mask"></span>
+        
         <div id="page-main" class="page ease-p3 page-hide-right">
             <div id="main">
                 <nav class='header row'>
