--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Netease Music UI</title>
+    <title>JH Music Player</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
 	<!--UC Fullscreen-->
@@ -26,7 +26,7 @@
     <div id="viewport">
         <!-- this span.mask help identify click events -->
         <span class="mask"></span>
-        
+
         <div id="page-main" class="page ease-p3 page-hide-right">
             <div id="main">
                 <nav class='header row'>
