style: #page-comments improve
1. add icons and improve layout
2. add page transition

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <div id="page-main" class="page ease-p3 page-hide-right">
             <div id="main">
                 <nav class='header row'>
-                    <span id="btn-back" class='left'></span>
+                    <span id="btn-back" class='left btn btn-back'></span>
                     <span id="tag-songMessage">
                         <span id="tag-songTitle" class="tag-title">The Saltwater Room</span>
                         <span id="tag-songArtist" class="tag-artist">Owl City</span>
                     </span>
-                    <span id="btn-share" class='right'></span>
+                    <span id="btn-share" class='right btn btn-share'></span>
                 </nav>
 
                 <div id="volume" class='row ease-p6'>
@@ -211,17 +211,57 @@
         </div>
 
         <div id="page-comments" class="page ease-p3 page-hide-right">
-            <ul id="list-comments">
-                <li>
+            <span class="header">
+                <span class="btn btn-back"></span>
+                <span class="tag tag-commentCount">99</span>
+            </span>
+            <span class="ban-controls">
+                <span class="view-album"></span>
+                <span class="tag-songMessage">
+                    <span class="tag-songTitle tag-title">The Saltwater Room</span>
+                    <span class="tag-songArtist tag-artist">Owl City</span>
+                </span>
+                <span class="btn btn-moreMessage icon icon-right-arrow"></span>
+            </span>
+            <span class="tag-message">精彩评论</span>
+            <div id="list-comments">
+                <span>
+                    <span class="view-commentUserIcon"></span>
+                    <span class="container-comment">
+                        <span class="tag-commentUser">Jonham</span>
+                        <span class="tag-commentDate">2016年5月31日</span>
+                        <span class="tag-commentContent">Live in the Saltwater Room with you. This comments should be longest. And may go throught 3 or 4 lines.</span>
+                        <span class="tag-commentAgreeCount">999<span class="icon icon-thumb-up"></span></span>
+                    </span>
+                </span>
+                <span>
                     <span class="view-commentUserIcon"></span>
                     <span class="container-comment">
                         <span class="tag-commentUser">Jonham</span>
                         <span class="tag-commentDate">2016年5月31日</span>
                         <span class="tag-commentContent">Live in the Saltwater Room with you.</span>
-                        <span class="tag-commentAgreeCount">999</span>
+                        <span class="tag-commentAgreeCount">999<span class="icon icon-thumb-up"></span></span>
                     </span>
-                </li>
-            </ul>
+                </span>
+                <span>
+                    <span class="view-commentUserIcon"></span>
+                    <span class="container-comment">
+                        <span class="tag-commentUser">Jonham</span>
+                        <span class="tag-commentDate">2016年5月31日</span>
+                        <span class="tag-commentContent">Live in the Saltwater Room with you.</span>
+                        <span class="tag-commentAgreeCount">999<span class="icon icon-thumb-up"></span></span>
+                    </span>
+                </span>
+                <span>
+                    <span class="view-commentUserIcon"></span>
+                    <span class="container-comment">
+                        <span class="tag-commentUser">Jonham</span>
+                        <span class="tag-commentDate">2016年5月31日</span>
+                        <span class="tag-commentContent">Live in the Saltwater Room with you.</span>
+                        <span class="tag-commentAgreeCount">999<span class="icon icon-thumb-up"></span></span>
+                    </span>
+                </span>
+            </div>
         </div>
 
         <div id="sidebar-left" class="sidebar ease-p3 sidebar-hide">
