style: add content and icons to #page-system

--- a/index.html
+++ b/index.html
@@ -110,15 +110,34 @@
         </div>
 
         <div id="page-system" class="page ease-p3">
-            <span class="file-loader">
-                <span>Click here to add files.</span>
-                <input id="fileLoader" class="btn" class=".layer-6" type="file" multiple="true" />
+            <span class="header">
+                <span class="btn icon icon-menu-w"></span>
+                <span class="icon-group">
+                    <span class="btn icon icon-netease"></span>
+                    <span class="btn icon icon-music"></span>
+                    <span class="btn icon icon-people"></span>
+                </span>
+                <span class="btn icon icon-search"></span>
             </span>
-            <span>
-                <button id="btn-fullscreen" class="btn">Go FullScreen Now!</button>
-            </span>
-            <span>
-                <button id="btn-showConsole">Show Console</button>
+            <span class="subpage-container">
+                <span id="subpage-netease" class="sub-page">
+                    <span class="file-loader">
+                        <span>Click here to add files.</span>
+                        <input id="fileLoader" class="btn" class=".layer-6" type="file" multiple="true" />
+                    </span>
+                    <span>
+                        <button id="btn-showConsole">Show Console</button>
+                    </span>
+                    <span>
+                        <button id="btn-fullscreen" class="btn">Go FullScreen Now!</button>
+                    </span>
+                </span>
+                <span id="subpage-music" class="sub-page">
+                    <span style="display:block;">Subpage-Music</span>
+                </span>
+                <span id="subpage-people" class="sub-page">
+                    <span style="display:block;">Subpage-People</span>
+                </span>
             </span>
 
             <span class="ban-controls">
