--- a/index.html
+++ b/index.html
@@ -285,20 +285,39 @@
 
         <div id="sidebar-left" class="sidebar ease-p3 sidebar-hide">
             <span id="tag-userMessage">
-                User-Message
+                <span class="view-userMessage left">
+                    <span class="icon icon-userIcon"></span>
+                    <span class="tag-userName">Jonham</span>
+                    <span class="tag-userRank">Lv.6</span>
+                </span>
+                <span class="btn-marks">600积分</span>
             </span>
             <ul>
-                <li>我的消息</li>
-                <li>积分商城 <span class="tag">130积分</span></li>
-                <li>付费音乐包</li>
-                <li>在线听歌免流量</li>
-                <li>听歌识曲</li>
-                <li>主题换肤 <span class="tag">官方红</span></li>
-                <li>夜间模式 <span class="btn-switch"></span></li>
-                <li>定时停止播放</li>
-                <li>音乐闹钟</li>
-                <li>驾驶模式</li>
-                <li>我的音乐云盘</li>
+                <li><span class="icon icon-mail"></span>
+                                <span class="label-userMsg">我的消息</span></li>
+                <li><span class="icon icon-cart"></span>
+                                <span class="label-marksHall">积分商城</span>
+                                            <span class="tag">600积分</span></li>
+                <li><span class="icon icon-package"></span>
+                                <span class="label-package">付费音乐包</span></li>
+                <li><span class="icon icon-free"></span>
+                                <span class="label-free">在线听歌免流量</span></li>
+                <li><span class="icon icon-mic"></span>
+                                <span class="label-listen">听歌识曲</span></li>
+                <li><span class="icon icon-cloth"></span>
+                                <span class="label-display">主题换肤</span>
+                                            <span class="tag">官方红</span></li>
+                <li><span class="icon icon-bulb"></span>
+                                <span class="label-nightMode">夜间模式</span>
+                                            <span class="btn-switch"></span></li>
+                <li><span class="icon icon-btn-stopAtTime"></span>
+                                <span class="label-countdown">定时停止播放</span></li>
+                <li><span class="icon icon-clock"></span>
+                                <span class="label-clock">音乐闹钟</span></li>
+                <li><span class="icon icon-btn-drivingMode"></span>
+                                <span class="label-driving">驾驶模式</span></li>
+                <li><span class="icon icon-cloud"></span>
+                                <span class="label-cloudDisk">我的音乐云盘</span></li>
                 <li>_</li>
             </ul>
             <span class="bottom">
