style: rename .ban-controls as .bar-sub-controls
1. rename
2. add sub-controls on #page-comments to return to #pagemain
3. add icons on #page-share

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </span>
             </span>
 
-            <span class="ban-controls">
+            <span class="bar-sub-controls">
                 <span class="view-albumCover icon-userIcon"></span>
                 <span class="tag-songMessage">
                     <span class="tag-songTitle tag-title">The Saltwater Room</span>
@@ -234,7 +234,7 @@
                 <span class="btn btn-back"></span>
                 <span class="tag tag-commentCount">99</span>
             </span>
-            <span class="ban-controls">
+            <span class="bar-sub-controls">
                 <span class="view-albumCover icon-userIcon"></span>
                 <span class="tag-songMessage">
                     <span class="tag-songTitle tag-title">The Saltwater Room</span>
