style: bind up .btn-play .btn-next
add songlist.pre and songlist.playPre
if user click .btn-play but no file, will ask user to load a file

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                             <span class="range-btn" style="left:0%"></span>
                             <span class="empty"></span>
                         </div>
-                        <span id="tag-totalTime">04:55</span>
+                        <span id="tag-totalTime">06:06</span>
                     </div>
 
                     <div id='controls' class="container row ease-p6">
                         <audio src=""></audio>
                         <span id="btn-playMode" class='left'></span>
                         <span id="btn-preSong"></span>
-                        <span class="btn btn-play"></span>
+                        <span class="btn btn-play icon-btn-pause-w"></span>
                         <span class="btn btn-nextSong"></span>
                         <span id="btn-songList" class='right'></span>
                     </div>
@@ -148,7 +148,7 @@
                 </span>
                 <span class="view-controls right">
                     <span class="btn btn-songList"></span>
-                    <span class="btn btn-play"></span>
+                    <span class="btn btn-play icon-btn-pause-r"></span>
                     <span class="btn btn-nextSong"></span>
                 </span>
 
@@ -212,8 +212,8 @@
                 <li><span class="btn icon icon-download"></span>
                                 <span class="btn download">下载</span></li>
                 <li><span class="icon icon-tag-artist"></span>
-                                <span class='tag-artist'>歌手：
-                                        <span class="btn inline value">Owl City</span></span></li>
+                                <span class='tag-artist-wrapper'>歌手：
+                                        <span class="btn inline tag-artist">Owl City</span></span></li>
                 <li><span class="icon icon-tag-album"></span>
                                 <span class='tag-album'>专辑：
                                         <span class="btn inline value">The Saltwater Room</span></span></li>
