func: add Song.playAt( time ) and add btn-addSong to menu-songList

--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
 
         <div id="menu-songlist" class="menu ease-p3 menu-hide">
             <span class="header">
-                <span class="btn left">收藏全部</span>
+                <!-- <span class="btn left">收藏全部</span> -->
+                <span class="btn left btn-addSong">添加歌曲</span>
                 <span class="center">播放列表(<span class="count inline">6</span>)</span>
                 <span class="btn right">清空</span>
             </span>
