func: create new tag-audioTimestamp which have node.update( time )

--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
                 <!-- RangeTime and Controls Buttons -->
                 <div class="bottom">
                     <div id='time' class='container row layer-3'>
-                        <span id="tag-currentTime">00:00</span>
+                        <span id="tag-currentTime" class="tag-audioTimestamp">00:00</span>
                         <div id="range-time" class='range ease-p6'>
                             <span class="loaded ease-p6"></span>
                             <span class="range-fill"></span>
                             <span class="range-btn" style="left:0%"></span>
                             <span class="empty"></span>
                         </div>
-                        <span id="tag-totalTime">06:06</span>
+                        <span id="tag-totalTime" class="tag-audioTimestamp">06:06</span>
                     </div>
 
                     <div id='controls' class="container row ease-p6">
