func: add NS.lyric
Lyric() on NS.lyric.Lyric is trying to wrap lrc file like Song() do to audio file.

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 
                 <span class="range">
                     <span class="range-fill"></span>
+                    <span class="range-btn" style="display:none;"></span>
                 </span>
             </span>
         </div>
