func: add songlist.init() that bind #btn-playMode to songlist.mode
fix: change NS.audio.songList to songlist

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <span id="btn-preSong"></span>
                         <span class="btn btn-play icon-btn-pause-w"></span>
                         <span class="btn btn-nextSong"></span>
-                        <span id="btn-songList" class='right'></span>
+                        <span id="btn-songlist" class='right'></span>
                     </div>
 
                 </div>
@@ -147,7 +147,7 @@
                     <span class="tag-songArtist tag-artist">Owl City</span>
                 </span>
                 <span class="view-controls right">
-                    <span class="btn btn-songList"></span>
+                    <span class="btn btn-songlist"></span>
                     <span class="btn btn-play icon-btn-pause-r"></span>
                     <span class="btn btn-nextSong"></span>
                 </span>
