func: add visualize.js to add visualizing effect to audio

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
                             <li class='line'>staring up at the planes that aren't there anymore</li>
                             <li class='line'>盯着不再有星星的天空</li>
                         </ul>
+                        <!-- canvas for audio visualization -->
+                        <span class="middle center">
+                            <canvas id="view-canvas" class="canvas-hide"></canvas>
+                        </span>
+
                         <div id="container-fileOption" class='layer-2'>
                             <span id="btn-lyricOption"></span>
                             <div id="menu-lyricOption" class='ease-p3 menu-hidetoRB'>
