html: add example to #subpage-people

--- a/index.html
+++ b/index.html
@@ -151,7 +151,14 @@
                 </div>
                 <div class="page-hide-right ease-p3">
                     <span id="subpage-people" class="sub-page">
-                        <span style="display:block;">Subpage-People</span>
+                        <span class="person">
+                            <span class="icon icon-userIcon"></span>
+                            <span class="tag">
+                                <span class="userName">Jonham</span>
+                                <span class="lastMessage">Hi!</span>
+                            </span>
+                            <span class="unreadCount">55</span>
+                        </span>
                     </span>
                 </div>
             </span>
