fix: modified #menu-lyricOptions

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<meta name="x5-page-mode" content="app" />
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<meta name="description" content="Lyric Player" />
-	<meta name="keywords" content="lyrics,lyric"/>
+	<meta name="description" content="JH Music Player" />
+	<meta name="keywords" content="music player,JH Music Player,lyrics,lyric"/>
 	<meta name="author" content="Jonham Chen, jonham@qq.com" />
 
-	<meta name="apple-mobile-web-app-title" content="Lyrics Player">
+	<meta name="apple-mobile-web-app-title" content="JH Music Player">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 
     <!-- using ?xxxx to make browser update css file 1 -->
@@ -72,9 +72,9 @@
                             <span id="btn-lyricOption"></span>
                             <div id="menu-lyricOption" class='ease-p3 menu-hidetoRB'>
                                 <span class="menu-item">歌词调整</span>
-                                <span class="menu-item">翻译报错</span>
-                                <span class="menu-item">歌词报错</span>
-                                <span class="menu-item">歌曲报错</span>
+                                <span class="menu-item">歌词编辑</span>
+                                <span class="menu-item">关闭歌词</span>
+                                <span class="menu-item">关闭音效图</span>
                             </div>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                 </div>
                 <div class="page-hide-right ease-p3">
                     <span id="subpage-people" class="sub-page">
-                        <span class="person">
+                        <span class="person btn">
                             <span class="icon icon-userIcon"></span>
                             <span class="tag">
                                 <span class="userName">Jonham</span>
