func: attach functions to items on #menuLyricOption

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                         <div id="container-fileOption" class='layer-2'>
                             <span id="btn-lyricOption"></span>
                             <div id="menu-lyricOption" class='ease-p3 menu-hidetoRB'>
-                                <span class="menu-item">歌词调整</span>
-                                <span class="menu-item">歌词编辑</span>
-                                <span class="menu-item">关闭歌词</span>
-                                <span class="menu-item">关闭音效图</span>
+                                <span class="menu-item btn-rangeLyric">歌词调整</span>
+                                <span class="menu-item btn-editLyric">歌词编辑</span>
+                                <span class="menu-item btn-toggleLyric">关闭歌词</span>
+                                <span class="menu-item btn-toggleCanvas">关闭音效图</span>
                             </div>
                         </div>
                     </div>
